control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/httproute-portless-service.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: portless-service
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo
      kind: Service
      group: ""
