control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-backend-group.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-backend-group
spec:
  rules:
  - backendRefs:
    - group: "*"
      name: foo
      port: 80
