control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-backend-kind.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-backend-kind
spec:
  rules:
  - backendRefs:
    - kind: "*"
      name: foo
      port: 80
