control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-filter-duplicate.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-filter-duplicate
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-header
          value: foo
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-header
          value: bar
