control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-hostname.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-hostname
spec:
  hostnames:
  - http://a<
  rules:
  - backendRefs:
    - name: foo
