control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-httredirect-hostname.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-backend-port
spec:
  rules:
  - backendRefs:
    - name: my-service
      port: 8080
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: "*.consul.networking.io"
