control-plane/custom-gateway-api/hack/invalid-examples/v1alpha2/httproute/invalid-method.yaml
apiVersion: consul.networking.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-method
spec:
  rules:
  - matches:
    - method: NOTREAL
